# visual-system-simulator

./: .gitignore  CONTRIBUTORS.md  Cargo.toml  LICENSE  README.md  benchmark.sh  benchmark_result.csv  config_test.sh  vss_perf_data.csv
vss/: Cargo.toml
vss-desktop/: Cargo.toml  build.rs
vss-desktop/src/: cmd.rs  main.rs  openxr.cpp  openxr.rs  varjo.cpp  varjo.rs
vss-desktop/src/devices/: av_device.rs  mod.rs
vss-desktop/src/node/: download_video.rs  mod.rs  upload_video.rs
vss-desktop/src/nodes/: mod.rs  upload_video.rs
vss-mobile/: Cargo.toml
vss-mobile/android/: build.gradle  proguard-rules.pro  settings.gradle
vss-mobile/android/gradle/wrapper/: gradle-wrapper.properties
vss-mobile/android/src/main/: AndroidManifest.xml
vss-mobile/android/src/main/assets/: ametropia.html  cataract.html  glaucoma.html  index.html  night-blindness.html  test.html
vss-mobile/android/src/main/assets/css/: app.css  pico.css
vss-mobile/android/src/main/assets/de/: achromatopsia.html  ametropia.html  cataract.html  color-blindness.html  glaucoma.html  macular-degeneration.html  night-blindness.html  presbyopia.html
vss-mobile/android/src/main/assets/en/: achromatopsia.html  color-blindness.html  index.html  macular-degeneration.html  presbyopia.html
vss-mobile/android/src/main/assets/js/: simulator-bridge.js
vss-mobile/android/src/main/java/: KnowledgebaseContentItem.java  KnowledgebaseListContent.java
vss-mobile/android/src/main/java/activities/: CoreActivity.java  CoreLoaderActivity.java  MainMenuActivity.java
vss-mobile/android/src/main/java/edsettings/: EDSettingsController.java  EDSettingsFileManager.java  EDSettingsListener.java
vss-mobile/android/src/main/java/fragments/: EDControlFragment.java  KnowledgebaseListFragment.java  KnowledgebaseWebFragment.java  ReadMeFragment.java  WebUISettingsFragment.java  WelcomeFragment.java
vss-mobile/android/src/main/res/layout/: activity_core_loader.xml  activity_main.xml  activity_main_loader.xml  app_bar_main_menu.xml  content_main_menu.xml  fragment_edcontroll.xml  fragment_knowledgebase.xml  fragment_knowledgebaselist_list.xml  fragment_webuisettings.xml  fragment_welcome.xml  nav_header_main_menu.xml  nav_splitscreen_simulation_switch.xml  nav_webui_channel_indicator.xml  nav_webui_connection_indicator.xml  nav_webui_onoff_switch.xml  persona_item.xml
vss-mobile/android/src/main/res/menu/: appbar_menu.xml  nav_menu.xml  opt_menu.xml
vss-mobile/android/src/main/res/values/: colors.xml  strings.xml  (+1 more)
vss-mobile/android/src/main/res/values-en/: strings.xml
vss-mobile/src/: android.rs  lib.rs
vss-mobile/src/devices/: camera_device.rs  camera_ffi.rs
vss-vr/: Cargo.toml  build.rs
vss-vr/src/: lib.rs  openxr.rs  varjo.cpp  varjo.rs  window_vr_surface.rs
vss-vr/src/node/: mod.rs  vr_buffer.rs  vr_buffer.wgsl
vss-web/: .gitignore  Cargo.toml  package.json  webpack.config.js
vss-web/app/: index.html  index.js  package.json  webpack.config.js
vss-web/src/: index.html  lib.rs  main.js  normal.json
vss/src/: config.rs  flow.rs  inspector.rs  lib.rs  main.rs  remote.rs  surface.rs  texture.rs  unused_main.rs  utils.rs  value.rs  vis_param.rs  window.rs
vss/src/devices/: image_device.rs  mod.rs  remote_device.rs  rgb_device.rs  video_device.rs  window_device.rs  yuv_device.rs
vss/src/node/: common.glsl  common.wgsl  macros.rs  mod.rs  slot.rs  vert.wgsl
vss/src/node/cataract/: mod.frag  mod.rs  mod.wgsl
vss/src/node/display/: gui.frag  gui.vert  mod.frag  mod.rs  mod.vert  mod.wgsl
vss/src/node/download_rgb_buffer/: mod.rs
vss/src/node/error_vis/: mod.rs
vss/src/node/eye_control/: mod.rs
vss/src/node/gui/: mod.rs
vss/src/node/gui_overlay/: gui.vert  mod.rs  mod.wgsl
vss/src/node/lens/: generator.frag  generator.rs  generator.wgsl  lens_model.wgsl  mod.frag  mod.rs  mod.wgsl
vss/src/node/passthrough/: mod.rs
vss/src/node/peacock/: mod.frag  mod.rs  mod.wgsl
vss/src/node/retina/: mod.frag  mod.rs  mod.wgsl
vss/src/node/retina/retina_map/: colorblindness.rs  glaucoma.rs  macular_degeneration.rs  mod.rs  nyctalopia.rs  osterberg.rs  receptor_density.rs
vss/src/node/rgb_buffer/: download.rs  mod.rs  upload.frag  upload.rs  upload.wgsl
vss/src/node/stereo_desktop/: mod.frag  mod.rs  mod.vert  mod.wgsl
vss/src/node/test_node/: mod.rs  mod.wgsl
vss/src/node/upload_rgb_buffer/: mod.rs
vss/src/node/upload_yuv_buffer/: mod.rs
vss/src/node/variance/: mod.frag  mod.rs  mod.wgsl
vss/src/node/varjo/: compositor.rs  compositor.vert  mod.frag  mod.rs  mod.vert  seperator.frag  seperator.rs
vss/src/node/vis_overlay/: mod.rs  mod.wgsl
vss/src/node/vr_compositor/: mod.frag  mod.rs  mod.vert
vss/src/node/yuv_buffer/: mod.rs  upload.rs  upload.wgsl
vss/src/nodes/: buffer_to_rgb.rs  buffer_to_yuv.rs  mod.rs  passthrough.rs  rgb_to_buffer.rs
vss/src/nodes/cataract/: mod.rs  shader.frag
vss/src/nodes/display/: mod.rs  shader.frag
vss/src/nodes/download_rgb_buffer/: mod.rs
vss/src/nodes/lens/: mod.rs  shader.frag
vss/src/nodes/retina/: mod.rs
vss/src/nodes/retina/retina_map/: mod.rs
vss/src/nodes/rgb_to_display/: mod.rs  shader.vert
vss/src/nodes/upload_rgb_buffer/: mod.rs  shader.frag
vss/src/nodes/upload_yuv_buffer/: mod.rs  shader.frag
vss/src/nodes/yuv420_to_rgb/: mod.rs  shader.frag  shader.vert
vss/src/nodes/yuv_to_rgb/: mod.rs
vss/src/passes/: mod.rs  shader.vert
vss/src/passes/cataract/: mod.rs  shader.frag
vss/src/passes/lens/: mod.rs  shader.frag
vss/src/passes/retina/: mod.rs  shader.frag
vss/src/passes/retina/retina_map/: colorblindness.rs  glaucoma.rs  macular_degeneration.rs  mod.rs  nyctalopia.rs  receptor_density.rs
vss/src/passes/rgb_display/: mod.rs  shader.frag  shader.vert
vss/src/passes/yuv420_rgb/: mod.rs  shader.vert
vss/src/passes/yuv_420_rgb/: mod.rs  shader.frag  shader.vert
vss/src/passes/yuv_rgb/: mod.rs  shader.frag
vss/src/pipeline/: mod.rs  node.rs  pass.rs  texture.rs  utils.rs  value.rs
vss/src/window/: mod.rs  remote.rs  window.rs
vss/tests/: passes.rs  tools.rs
(+76 files in other folders)
