[package]
name = "vss-desktop"
edition = "2018"
version = "1.0.0"
authors = ["The Visual System Simulator Developers"]
license = "Apache-2.0"
build = "build.rs"
default-run = "vss"

[[bin]]
name = "vss"
path = "src/main.rs"

[dependencies]
wgpu = { workspace = true }
wgpu-hal = { workspace = true, optional = true }
cgmath = { workspace = true }
vss = { path = "../vss" }
vss-winit = { path = "../vss-winit" }
clap = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "*"
glob = "0.3"
mustache = "0.9"
ac_ffmpeg = { package = "ac-ffmpeg", version = "0.17.4", optional = true }
log = "0.4"
simple-logging = "2.0.2"
ash = { version = "0.37.3", optional = true }
pollster = "0.3"

[build-dependencies]
cc = "^1.0.61"

[features]
default = []
video = ["ac_ffmpeg"]
varjo = ["wgpu-hal", "ash"]
openxr = []
