[package]
name = "vss-mobile"
edition = "2018"
version = "1.0.0"
authors = ["The Visual System Simulator Developers"]
license = "Apache-2.0"

[lib]
name = "vss"
crate-type = ["cdylib"]

[dependencies]
vss = { path = "../vss" }
lazy_static = "1.4.0"
log = "0.4"
futures = "0.3"

[target.'cfg(target_os="android")'.dependencies]
jni = "0.21"
ndk-glue = "0.7"
ndk = "0.7"
ndk-sys = "0.4.1+23.1.7779620"
raw-window-handle = "0.5.0"

[package.metadata.android.sdk]
min_sdk_version = 24
target_sdk_version = 33
