[package]
name = "vss-mobile"
edition = "2018"
version = "1.0.0"
authors = ["The Visual System Simulator Developers"]
license = "Apache-2.0"

[lib]
name = "vss"
crate-type = ["cdylib"]

[dependencies]
wgpu = { workspace = true }
raw-window-handle = { workspace = true }
vss = { path = "../vss" }
lazy_static = "1.4.0"
log = "0.4"
futures = "0.3"

[target.'cfg(target_os="android")'.dependencies]
jni = "0.21"
ndk = "0.7"
ndk-sys = "0.4.1"
android_logger = "0.13.1"

[package.metadata.android.sdk]
min_sdk_version = 24
target_sdk_version = 33
