[package]
name = "vss-web"
edition = "2018"
version = "1.0.0"
authors = ["The Visual System Simulator Developers"]
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
vss = { path = "../vss", features = ['webgl'] }
vss-winit = { path = "../vss-winit" }
console_error_panic_hook = "0.1.7"
console_log = "1"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.34"
web-sys = { version = "0.3.64", features = ['console'] }
winit = { workspace = true }
