[package]
name = "vss"
version = "1.0.0"
edition = "2021"
authors = ["The Visual System Simulator Developers"]
license = "Apache-2.0"
resolver = "2"

[dependencies]
eframe = "0.21.3"
winit = "0.27.5"
wgpu = "0.15.1"
image = "0.23"
cgmath = "0.18"
bitflags = "1.2"
futures-intrusive = "0.5.0"
raw-window-handle = "0.5.0"
