[package]
name = "vss"
version = "1.0.0"
edition = "2021"
authors = ["The Visual System Simulator Developers"]
license = "Apache-2.0"
resolver = "2"

[dependencies]
egui = "0.22"
egui-wgpu = "0.22"
wgpu = "0.16"
image = "0.24"
cgmath = "0.18"
bitflags = "2.3"
futures-intrusive = "0.5"
raw-window-handle = "0.5"
serde_json = "*"
serde = "1"

[features]
webgl = ["wgpu/webgl"]
