[package]
name = "vss"
version = "1.0.0"
edition = "2021"
authors = ["The Visual System Simulator Developers"]
license = "Apache-2.0"
resolver = "2"

[dependencies]
cgmath = { workspace = true }
raw-window-handle = { workspace = true }
wgpu = { workspace = true }
egui = "0.22"
egui-wgpu = "0.22"
image = "0.24"
bitflags = "2.3"
futures-intrusive = "0.5"
serde_json = "*"
serde = "1"
instant = "0.1"

[features]
webgl = ["wgpu/webgl"]
